--- a/project/helm/templates/service.yaml
+++ b/project/helm/templates/service.yaml
@@ -7,9 +7,11 @@ metadata:
   namespace: {{ .Values.namespace.name }}
 spec:
   ports:
-  - port: {{ .Values.service.port }}
-    protocol: {{ .Values.service.protocol }}
-    targetPort: {{ .Values.service.targetPort }}
+{{- with .Values.service }}
+  - port: {{ .port }}
+    protocol: {{ .protocol }}
+    targetPort: {{ default .port .targetPort }}
   selector:
     app: techtrends
-  type: {{ .Values.service.type }}
+  type: {{ .type }}
+{{- end }}
